--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.KounkukCafe"
-        tools:targetApi="31" />
+        tools:targetApi="31">
+        <activity
+            android:name=".CafeListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FaceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VoiceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.KounkukCafe.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
+        </activity>
+    </application>
 
 </manifest>
