--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 android {
     namespace 'com.kounkukcafe.kounkukcafe'
     compileSdk 33
+    packagingOptions {
+        pickFirst 'lib/*/libDaumMapEngineApi.so'
+    }
 
     defaultConfig {
         applicationId "com.kounkukcafe.kounkukcafe"
@@ -51,5 +54,10 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.9.2")             //rest 통신
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'          //rest 통신
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'    //rest 통신 -
+
+
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0' // 권한요청용
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
 
 }
