FIX: 맵 안뜨는 거 해결, (바텀시트 스크롤관련 미완)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,15 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a', 'x86_84'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
