VoiceActivity.kt기능 제거버전

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
             android:exported="false" />
         <activity
             android:name=".VoiceRecordingActivity"
-            android:exported="false"/>
+            android:exported="false">
+
+        </activity>
 
 
         <meta-data
