--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,8 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
-        </intent>
-    </queries>
+
+
 
     <application
         android:allowBackup="true"
@@ -27,15 +24,6 @@
         android:theme="@style/Theme.KounkukCafe"
         android:usesCleartextTraffic="true"
         tools:targetApi="27">
-        <activity
-            android:name=".VoiceLoadingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".VoiceRecordingActivity"
-            android:exported="false">
-
-        </activity>
-
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -45,11 +33,10 @@
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/Theme.KounkukCafe.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".ExampleImageActivity"
@@ -66,11 +53,20 @@
         <activity
             android:name=".VoiceActivity"
             android:exported="false" />
+        <activity android:name=".VoiceLoadingActivity"
+            android:exported="false"/>
+        <activity android:name=".VoiceRecordingActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.KounkukCafe.NoActionBar" />
+            android:theme="@style/Theme.KounkukCafe.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
